# shared_memory

./: CMakeLists.txt  master_shared_memory.cpp  master_shared_memory.h  protocol.h  receiver.c  receiver.cpp  sender.c  sender.cpp
master/: CMakeLists.txt  main.cpp
shared_memory_manager/: CMakeLists.txt
shared_memory_manager/include/: shared_memory.h
shared_memory_manager/src/: shared_memory.cpp
slave/: CMakeLists.txt  main.cpp
